# delusion64

./: .codespellrc  .gdbinit  .gitignore  Cargo.toml  flake.nix  justfile
.cargo/: config.toml
crates/delusion64/: Cargo.toml
crates/delusion64-gui/: Cargo.toml
crates/delusion64-gui/src/: context.rs  input.rs  lib.rs  screen.rs  ui.rs
crates/delusion64/src/: bus.rs  emu.rs  input.rs  main.rs
crates/delusion64/src/bus/: location.rs  mod.rs
crates/delusion64/src/pi/: mod.rs  register.rs
crates/emgui/: Cargo.toml
crates/emgui/src/: context.rs  lib.rs  theme.rs  ui.rs
crates/emgui/src/widget/: error.rs  file.rs  frame.rs  input.rs  menu_bar.rs  mod.rs  settings.rs
crates/mips-decomp/: Cargo.toml
crates/mips-decomp/src/: cache.rs  format.rs  instruction.rs  label.rs  lib.rs  pattern.rs  register.rs
crates/mips-decomp/src/matcher/: mnemonic.rs  mod.rs  operand.rs
crates/mips-decomp/src/register/: cp0.rs  fpu.rs  mod.rs
crates/mips-decomp/src/register/cpu/: cp0.rs  fpu.rs  mod.rs
crates/mips-decomp/src/register/rsp/: control.rs  mod.rs  special.rs
crates/mips-lifter/: Cargo.toml
crates/mips-lifter/src/: address_map.rs  builder.rs  codegen.rs  env.rs  jit.rs  label.rs  lib.rs  macros.rs  recompiler.rs
crates/mips-lifter/src/codegen/: address_map.rs  arithmetic.rs  comparison.rs  control_flow.rs  init.rs  mod.rs  register.rs
crates/mips-lifter/src/env/: function.rs  gdb.rs  mod.rs
crates/mips-lifter/src/recompiler/: cpu.rs  mod.rs  rsp.rs
crates/mips-lifter/src/runtime/: bus.rs  callback.rs  function.rs  gdb.rs  memory.rs  mod.rs  register_bank.rs  registers.rs
crates/mips-lifter/src/runtime/gdb/: command.rs  extension.rs  mod.rs
crates/mips-lifter/src/runtime/memory/: mod.rs  tlb.rs
crates/n64-cartridge/: Cargo.toml
crates/n64-cartridge/src/: header.rs  lib.rs
crates/n64-common/: Cargo.toml
crates/n64-common/src/: lib.rs  memory.rs  utils.rs
crates/n64-mi/: Cargo.toml
crates/n64-mi/src/: lib.rs
crates/n64-pi/: Cargo.toml
crates/n64-pi/src/: lib.rs  register.rs
crates/n64-pif/: Cargo.toml
crates/n64-pif/src/: command.rs  device.rs  lib.rs
crates/n64-pif/src/joybus/: channel.rs  controller.rs  device.rs  mod.rs  response.rs
crates/n64-rsp/: Cargo.toml
crates/n64-rsp/src/: cpu.rs  dma.rs  jit.rs  lib.rs  memory.rs  register.rs
crates/n64-rsp/src/register/: definitions.rs  mod.rs
crates/n64-si/: Cargo.toml
crates/n64-si/src/: lib.rs  register.rs
crates/n64-vi/: Cargo.toml
crates/n64-vi/src/: lib.rs  register.rs
notes/: bootloader-progress.txt  notes.md  project.md  resources.md
