[workspace]
resolver = "2"
members = ["crates/*"]

[profile.dev]
opt-level = 1
overflow-checks = false

# For build scripts and procedural macros
[profile.dev.build-override]
opt-level = 0

[profile.release-lto]
inherits = "release"
lto = true

# For build scripts and procedural macros
[profile.release-lto.build-override]
opt-level = 0
codegen-units = 256
debug = false
