[package]
name = "delusion64"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug-print"]
debug-print = []

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
mips-lifter = { path = "../mips-lifter" }
n64-cartridge = { path = "../n64-cartridge" }
n64-pi = { path = "../n64-pi" }
n64-mi = { path = "../n64-mi" }
