[package]
name = "delusion64"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug-print"]
debug-print = []

[dependencies]
emgui = { path = "../emgui" }
mips-lifter = { path = "../mips-lifter" }
n64-common = { path = "../n64-common" }
n64-cartridge = { path = "../n64-cartridge" }
n64-pi = { path = "../n64-pi" }
n64-mi = { path = "../n64-mi" }
n64-vi = { path = "../n64-vi" }
n64-si = { path = "../n64-si" }
n64-rsp = { path = "../n64-rsp" }
clap = { version = "4.3.11", features = ["derive"] }
