[package]
name = "emgui"
description = "A GUI library designed for emulators, using egui."
version = "0.1.0"
edition = "2021"

[features]
default = ["theme"]
theme = []

[dependencies]
rfd = "0.12.1"
thiserror = "1.0.51"

[dependencies.ring-channel]
version = "0.12.0"
default-features = false
features = ["std"]

[dependencies.eframe]
version = "0.24.0"
default-features = false
features = ["default_fonts", "wgpu", "wayland", "x11"]
