[package]
name = "mips-lifter"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug-print"]
debug-print = []

[dependencies]
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
gdbstub = "0.6.6"
gdbstub_arch = "0.2.4"
strum = { version = "0.25.0", features = ["derive"] }
tartan-bitfield = "1.2.0"
mips-decomp = { path = "../mips-decomp" }
