[package]
name = "mips-lifter"
version = "0.1.0"
edition = "2021"

[dependencies]
gdbstub = "0.7.1"
strum = { version = "0.26.1", features = ["derive"] }
tartan-bitfield = "1.2.0"
thiserror = "1.0.56"
mips-decomp = { path = "../mips-decomp" }

[dependencies.inkwell]
version = "0.4.0"
default-features = false
# Dynamic linking is used because it significantly reduces build times, LLVM is quite large.
# TODO: Link statically for release builds.
features = ["llvm17-0-force-dynamic", "target-x86"]
